--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-recaptcha",
+  "name": "express-recaptcha-2",
   "version": "5.0.1",
   "description": "Google recaptcha middleware for express",
   "main": "./dist/index.js",
